skan_tests/error/noreturnfunc.sk
int main()
{
    return 1;
}

new()
{
    int i = 1;
}
